bevy_asset_loader/tests/ui_with_2d_3d_features/errors_on_multiple_fields.stderr
error: Unknown attribute
 --> tests/ui_with_2d_3d_features/errors_on_multiple_fields.rs:8:13
  |
8 |     #[asset(what_is_this)]
  |             ^^^^^^^^^^^^

error: Wrong attribute type. Expected 'integer'
  --> tests/ui_with_2d_3d_features/errors_on_multiple_fields.rs:13:67
   |
13 |     #[asset(texture_atlas(tile_size_x = 100., tile_size_y = 100., columns = 10., rows = 1))]
   |                                                                   ^^^^^^^^^^^^^
